# Anonmyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
anonimizador/: __init__.py  __main__.py  cli.py  deteccao.py  redator.py
anonimizador/detectores/: __init__.py  cnh.py  cnpj.py  cpf.py  email.py  endereco.py  nomes.py  passaporte.py  pis.py  rg.py  telefone.py  titulo_eleitor.py
anonimizador/extratores/: __init__.py  txt.py
exemplos/: ficha_exemplo.txt
tests/: conftest.py  test_cli.py  test_contato.py  test_corpus.py  test_deteccao.py  test_documentos.py  test_extratores.py  test_nomes.py  test_redator.py  test_rg_passaporte.py
